crates/lutum/tests/ui/hooks_path_slot.stderr
error: expected `trait`
 --> tests/ui/hooks_path_slot.rs:2:1
  |
2 | struct MyHooks {
  | ^^^^^^
