crates/lutum/tests/ui/hooks_path_slot.rs
#[lutum::hooks]
struct MyHooks {
    label: String,
}

fn main() {}
